# pg_lakehouse

./: Cargo.toml
.github/workflows/: benchmark-pg_lakehouse.yml  benchmark-pg_search.yml  lint-bash.yml  lint-docker.yml  lint-format.yml  lint-markdown.yml  lint-pr-title.yml  lint-rust.yml  lint-yaml.yml  publish-github-release.yml  publish-paradedb.yml  publish-pg_lakehouse.yml  publish-pg_search.yml  test-docs.yml  test-paradedb.yml  test-pg_lakehouse.yml  test-pg_search.yml
docs/: flowchart.md
pg_lakehouse/: Cargo.toml
pg_lakehouse/src/fdw/: azdls.rs
pg_lakehouse/src/hooks/: executor.rs
pg_lakehouse/src/schema/: attribute.rs  cell.rs
pg_search/: Cargo.toml
shared/: Cargo.toml
shared/src/telemetry/: controller.rs
src/: lib.rs
src/api/: mod.rs
src/datafusion/: catalog.rs  context.rs  provider.rs  schema.rs  session.rs
src/fdw/: azblob.rs  base.rs  gcs.rs  handler.rs  local.rs  s3.rs
src/hooks/: executor.rs  mod.rs  process.rs  query.rs
tests/: scan.rs
