[package]
name = "pg_lakehouse"
description = "An analytical query engine for Postgres"
version = "0.7.6"
edition = "2021"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["pg15"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
anyhow = "1.0.83"
async-std = { version = "1.13.0", features = ["tokio1", "attributes"] }
chrono = "0.4.34"
dashmap = "5.5.3"
datafusion = { version = "41.0.0", features = ["avro"] }
object_store = { version = "0.10.2", features = ["aws", "http"] }
object_store_opendal = { version = "0.44.3" }
opendal = { version = "0.47.3", features = [
  "services-azblob",
  "services-azdls",
  "services-gcs",
  "services-s3",
] }
pgrx = "0.12.7"
serde = "1.0.201"
shared = { path = "shared" }
supabase-wrappers = { git = "https://github.com/paradedb/wrappers.git", default-features = false, rev = "8aef4a6" }
thiserror = "1.0.59"
url = "2.5.0"
once_cell = "1.10"

[dev-dependencies]
aws-config = "1.5.1"
aws-sdk-s3 = "1.34.0"
futures = "0.3.30"
pgrx-tests = "0.12.7"
rstest = "0.19.0"
serde_arrow = { version = "0.11.3", features = ["arrow-51"] }
shared = { path = "shared", features = ["fixtures"] }
sqlx = { version = "0.7.4", features = [
  "postgres",
  "runtime-async-std",
  "time",
  "bigdecimal",
  "uuid",
] }
testcontainers = "0.16.7"
testcontainers-modules = { version = "0.4.2", features = ["localstack"] }

[[bin]]
name = "pgrx_embed_pg_lakehouse"
path = "src/bin/pgrx_embed.rs"